# PandyAI-Assessment

./: .env-example  .gitignore  README.md  agentic_out.txt  gemini-code-1778009269688.md  pyproject.toml  report.aux  report.out  report.tex  report.toc
app/: .env  demo.py  explain.py  rank.py  settings.py
app/data/: action_map.json  skill_aliases.json
app/data/chroma_db/: chroma.sqlite3
app/schemas/: __init__.py  candidate.py  job.py  llm_respone.py
app/utils/: __init__.py  approaches.py  embedding.py  llm_reranker.py  parser.py  scorer.py  skill_normalization.py
outputs/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/agentic/insights/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/agentic/rank/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/deterministic/insights/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/deterministic/rank/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/hybrid/insights/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/hybrid/rank/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/insights/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
outputs/rank/: j-001.json  j-002.json  j-003.json  j-004.json  j-005.json
tests/: test_normalization.py  test_scorer.py
