[project]
name = "pandyai"
version = "0.1.0"
description = "Three-approach AI candidate matching engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "groq>=1.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sentence-transformers>=5.4.1",
]

[project.scripts]
pandyai-rank    = "app.rank:main"
pandyai-explain = "app.explain:main"
pandyai-demo    = "app.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
